work on responsiveness index page

--- a/partials/_blog.scss
+++ b/partials/_blog.scss
@@ -148,10 +148,11 @@
             margin-top: -17%;
 
             .activitiesImg {
-                margin-right: -9%;
                 box-shadow: -15px 15px 0 1px rgb(8, 253, 237);
+                margin-right: -9%;
                 margin-right: 0%;
                 margin-left: 30px;
+                // transform: translate(3.4%)
             }
 
             .activitiesText {
