--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -276,15 +276,17 @@ footer {
     .contactSection {
         flex-direction: column;
         align-items: center;
-        padding: 5% 0 10% 0;
+        padding: 10% 0 5% 0;
 
         .contactContainer {
+            order: 1;
             width: 80%;
             .contactInfo {
                 width: 100%;
                 // align-items: center;
                 justify-content: center;
                 text-align: center;
+                margin-top: 5%;
 
                 .contactIcons {
                     width: 60%;
