--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
 @import "../partials/setup";
 @import "../partials/variables";
 @import "../partials/header";
+@import "../partials/mainSection";
 @import "../partials/blog";
 @import "../partials/contact";
 
@@ -43,265 +44,6 @@ button {
 .mainWrapper {
     max-width: 80%;
     margin: 0 auto;
-}
-
-
-.fourLinks {
-    padding: 15% 0 5% 0;
-    width: 100%;
-    background-color: $primaryColor;
-    color: $textColor;
-
-    .mainWrapper {
-        display: flex;
-        flex-wrap: wrap;
-    
-        .fourLinksContainer {
-            // border: 2px solid yellow;
-            width: 50%;
-            display: flex;
-            flex-direction: row;
-        
-            .fourLinksText {
-                display: flex;
-                // flex-direction: column;
-                // justify-content: center;    
-                align-items: flex-start;
-
-                span {
-                    margin-top: 3%;
-                }
-
-                i {
-                    // border: 2px solid red;
-                    // font-size: 32px;
-                    // border-radius: 50%;
-                    // background-color: $accentColor;
-                    // padding: 2%;
-                    color: $secondaryColor;
-                    // align-self: flex-start;
-                    // margin-top: 10%; 
-                }
-
-                .icon-background {
-                    color: $accentColor;
-                }
-
-                // .fa-users {
-                //     padding: 3% 2.5%;
-                //     font-size: 24px;
-                // }
-
-                // .fa-file {
-                //     padding: 2% 3%;
-                // }
-
-                // .fa-phone {
-                //     font-size: 24px;
-                // }
-
-                .fourLinksTitle {
-                    width: 80%;
-                    display: flex;
-                    // align-items: center;
-                    flex-direction: column;
-                    margin-left: 2%;
-
-                    h2 {
-                        
-                        font-family: 'Walter Turncoat', cursive;
-                        font-size: 45px;
-                        line-height: 99.8px;
-                        // text-transform: uppercase;
-                    }
-                }
-
-                p {
-                    // padding-left: 13%;
-                    @include pStyles;
-                }
-            }
-        }
-    }
-}
-
-.quadrantSection {
-    width: 100%;
-    background-color: $secondaryColor;
-    font-family: 'Roboto', sans-serif;
-    color: $textColor;
-
-    .mainWrapper {
-        display: flex;
-        flex-direction: column;
-        
-
-        .ourPrograms {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 5% 0;
-        
-
-            .ourProgramsImg {
-                width: 52.5%;
-                margin-left: -12.5%;
-                box-shadow: 15px 15px 0 1px rgb(8, 253, 237);
-                margin-top: -10%;
-            }
-
-            .ourProgramsText {
-                width: 40%;
-                display: flex;
-                flex-direction: column;
-
-                h2 {
-                    font-family: 'Walter Turncoat', cursive;
-                    font-size: 40px;
-                }
-
-                p {
-                   @include pStyles;
-                   padding: 5% 0;
-                }
-            }
-        }
-
-        .newLocation {
-            display: flex;
-            // flex-direction: row-reverse;
-            justify-content: space-between;
-            align-items: center;
-            padding: 5% 0;
-            
-            .newLocationImg {
-                width: 52.5%;
-                margin-right: -12.5%;
-                box-shadow: -15px 15px 0 1px rgb(8, 253, 237);
-                margin-bottom: -10%;
-            }
-
-            .newLocationText {
-                width: 40%;
-                display: flex;
-                flex-direction: column;
-                text-align: right;
-                align-items: flex-end;
-
-                h2 {
-                    font-family: 'Walter Turncoat', cursive;
-                    font-size: 40px;
-                }
-
-                p {
-                    @include pStyles;
-                    padding: 5% 0;
-                }
-            }
-        }
-    }
-}
-
-
-.roadTripsSection {
-    width: 100%;
-    background-color: $primaryColor;
-    color: $textColor;
-    padding: 13% 5% 8% 5%;
-
-    .mainWrapper {
-        display: flex;
-        justify-content: center;
-
-        .roadTripsContent {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            h2 {
-                font-size: 40px;
-            }
-
-            p {
-                @include pStyles;
-                padding: 5% 0;
-            }
-        }
-    }
-}
-
-.swimmingImg {
-    width: 100%;
-    height: 70vh;
-    background-image: url("../assets/banner.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.eventsSection {
-    width: 100%;
-    background-color: $primaryColor;
-    padding: 10% 0 5% 0;
-
-    .mainWrapper {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        .eventsImg {
-            width: 30%;
-            box-shadow: -15px 15px 0 1px rgb(8, 253, 237);
-        }
-
-        .eventsContent {
-            width: 60%;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            color: $textColor;
-
-            h2 {
-                font-size: 40px;
-                font-family: 'Walter Turncoat', cursive;
-            }
-
-            p {
-                @include pStyles;
-                padding: 5% 0;
-            }
-        }
-    }
-}
-
-.gallerySection {
-    width: 100%;
-    background-color: $secondaryColor;
-    padding: 5% 0;
-
-    .mainWrapper {
-        // display: flex;
-        // justify-content: center;
-
-        .galleryContainer {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-
-
-            .galleryItem {
-                width: 31%;
-            }
-        }
-    }
-}
-
-footer {
-    width: 100%;
-    background-color: $tertiaryColor;
-    color: $textColor;
-    text-align: center;
-    @include pStyles;
-    padding: 10px 0;
 }
 
 // @media (min-width: 1600px) {
