--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -25,21 +25,10 @@
                 align-items: center;
                 padding-top: 5%;
                 
-
                 ul {
-
-                    li a:hover {
-                        padding-bottom: 5px;
-                        border-bottom: 2px solid $accentColor;
-                    }
-                }
-            }
-
-            .headerNav ul {
-                width: 75%;
+                    width: 75%;
                 display: flex;
                 justify-content: space-between;
-                
 
                 li a {
                    color: $textColor;
@@ -48,13 +37,28 @@
                    line-height: 29px;
                    letter-spacing: 1px;
                 }
+
+                    li a:hover {
+                        padding-bottom: 5px;
+                        border-bottom: 2px solid $accentColor;
+                    }
+                }
             }
+
+            // .headerNav ul {
+                
+                
+
+                
+            // }
 
             .headerTitle {
                 // border: 2px solid yellow;
                 height: 80%;
                 display: flex;
                 align-items: center;
+                // position: relative;
+                z-index: 5;
 
                 h1 {
                     width: 100%;
@@ -71,6 +75,51 @@
             // margin-top: 20%;
             // margin-right: -12.5%;
             transform: translate(20%, 50%) scale(1.1);
+        }
+    }
+}
+
+@media (max-width: 1100px) {
+
+    .mainHeader {
+        .mainWrapper {
+            .headerContent {
+                width: 100%;
+
+                .headerNav {
+                    ul {
+                        width: 80%;
+                        margin: 0 auto;
+                    }
+                }
+
+                .headerTitle {
+                    h1 {
+                        padding-top: 0;
+                        padding-bottom: 10%;
+                        text-align: center;
+                    }
+                }
+            }
+
+            .headerImg {
+                display: none;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .mainHeader {
+        .mainWrapper {
+            .headerContent {
+                .headerTitle {
+                    h1 {
+                        padding-bottom: 20%;
+                        font-size: 110px;
+                    }
+                }
+            }
         }
     }
 }
