--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -315,6 +315,22 @@ footer {
 }
 
 @media (max-width: 475px) {
+    .contactHeader .mainWrapper .contactContent {
+                .contactHeaderNav {
+                    ul {
+                        width: 100%;
+                        flex-wrap: wrap;
+                        // justify-content: center;
+
+                        li {
+                            // display: block;
+                            width: 50%;
+                            text-align: center;
+                            margin-top: 5%;
+                        }
+                    }
+                }
+    }
 
     .contactSection {
         .contactContainer {
