--- a/partials/_blog.scss
+++ b/partials/_blog.scss
@@ -149,9 +149,9 @@
 
             .activitiesImg {
                 box-shadow: -15px 15px 0 1px rgb(8, 253, 237);
-                margin-right: -9%;
-                margin-right: 0%;
-                margin-left: 30px;
+                // margin-right: -9%;
+                // margin-right: 0%;
+                margin-left: 16px;
                 // transform: translate(3.4%)
             }
 
@@ -160,7 +160,7 @@
                 border-left: 5px solid $accentColor;
                 border-bottom: 5px solid $accentColor;
                 // padding-right: 5%;
-                margin-left: 1.6%;
+                // margin-left: 1.6%;
 
                 * {
                     margin-bottom: 3%;
@@ -243,9 +243,7 @@
     form {
         display: flex;
         flex-direction: column;
-        // align-items: flex-start;
         width: 50%;
-        // border: 2px solid yellow;
         margin-right: 4%;
         margin-bottom: 6%;
         
@@ -277,7 +275,6 @@
             input::placeholder {
                 padding-left: 10%;
                 color: $textColor;
-                // @include pStyles;
             }
         }
 
@@ -293,8 +290,6 @@
         }
 
         textarea::placeholder {
-            // padding-left: 2%;
-            // padding-top: 2%;
             color: $textColor;
         }
 
@@ -314,6 +309,91 @@ footer {
     padding: 10px 0;
 }
 
+@media (max-width: 900px) {
+
+    .blogHeader .mainWrapper .blogContent .blogHeaderNav {
+        ul {
+            width: 100%;
+        }
+    }
+
+    .blogSection {
+        padding: 0;
+        flex-direction: column;
+
+
+            .blogAside {
+                width: 100%;
+                flex-direction: row;
+                margin: initial;
+                padding: initial;
+                padding: 5%;
+                justify-content: space-between;
+
+                .asideImg {
+                    width: 40%;
+                    margin: initial;
+                }
+
+                .asideText {
+                    width: 55%;
+                    
+                    .asideMission,
+                    .recentPosts {
+                        padding: initial;
+                    }
+
+                    .recentPosts {
+                        margin-top: 5%;
+                    }
+
+                    h3 {
+                        margin: initial;
+                    }
+                }
+            }
+
+            .activities {
+                width: 100%;
+                margin: initial;
+                align-items: center;
+                padding: 5% 0;
+
+                .activitiesImg {
+                    width: 90%;
+                    margin: initial;
+                }
+
+                .activitiesText {
+                    padding: initial;
+                    padding: 5% 10%;
+                    border: none;
+  
+                }
+            }
+    }
+
+    .commentsSection {
+
+        .commentsContainer {
+            width: 100%;
+            padding: initial;
+            padding: 0 10% 5% 10%;
+
+            h2 {
+                margin-bottom: 5%;
+            }
+        }
+
+        form {
+            width: 100%;
+            margin: initial;
+            padding: 0 10% 5% 10%;
+        }
+    }
+}
+
 // compelled to get minute details right
+// offset the margin of the border by as much as the box shadow width
 
 // main 2 div width may be too small
