--- a/partials/_blog.scss
+++ b/partials/_blog.scss
@@ -393,6 +393,89 @@ footer {
     }
 }
 
+@media (max-width: 768px) {
+
+    .blogHeader .mainWrapper 
+    .blogContent {
+        width: 100%;    
+        .blogHeaderNav {
+            ul {
+                width: 100%;
+            }
+        }
+    } 
+}
+
+@media (max-width: 600px) {
+
+    .blogSection {
+    
+        .blogAside {
+
+            .asideImg {
+                display: none;
+            }
+
+            .asideText {
+                width: 100%;
+                // text-align: center;
+                h3 {
+                    text-align: center;
+                    margin-bottom: 3%;
+                }
+            }
+        
+        }
+
+        .activities .activitiesText {
+            h2 {
+                font-size: 50px;
+            }
+        }
+    }
+
+    .commentsSection .commentsContainer h2 {
+        font-size: 50px;
+    }
+
+}
+
+
+@media (max-width: 400px) {
+    .blogHeader .mainWrapper .blogContent {
+                .blogHeaderNav {
+                    ul {
+                        width: 100%;
+                        flex-wrap: wrap;
+                        // justify-content: center;
+
+                        li {
+                            // display: block;
+                            width: 50%;
+                            text-align: center;
+                            margin-top: 5%;
+                        }
+                    }
+                }
+            }
+    .commentsSection {
+        form {
+            // box-shadow: none;
+
+            .formFields {
+                flex-direction: column;
+                margin-top: 5%;
+
+                input[type="text"],
+                input[type="email"] {
+                    width: 100%;
+                    margin-bottom: 5%;
+                }
+            }
+        }
+    }
+}
+
 // compelled to get minute details right
 // offset the margin of the border by as much as the box shadow width
 
