--- a/styles/style.css
+++ b/styles/style.css
@@ -1254,6 +1254,61 @@ footer {
   }
 }
 
+@media (max-width: 768px) {
+  .blogHeader .mainWrapper
+.blogContent {
+    width: 100%;
+  }
+  .blogHeader .mainWrapper
+.blogContent .blogHeaderNav ul {
+    width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .blogSection .blogAside .asideImg {
+    display: none;
+  }
+  .blogSection .blogAside .asideText {
+    width: 100%;
+  }
+  .blogSection .blogAside .asideText h3 {
+    text-align: center;
+    margin-bottom: 3%;
+  }
+  .blogSection .activities .activitiesText h2 {
+    font-size: 50px;
+  }
+  .commentsSection .commentsContainer h2 {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 400px) {
+  .blogHeader .mainWrapper .blogContent .blogHeaderNav ul {
+    width: 100%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .blogHeader .mainWrapper .blogContent .blogHeaderNav ul li {
+    width: 50%;
+    text-align: center;
+    margin-top: 5%;
+  }
+  .commentsSection form .formFields {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 5%;
+  }
+  .commentsSection form .formFields input[type="text"],
+  .commentsSection form .formFields input[type="email"] {
+    width: 100%;
+    margin-bottom: 5%;
+  }
+}
+
 .contactHeader {
   width: 100%;
   background-image: url("../assets/contact-header.jpg");
